--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -48,7 +48,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>7.1.1.0-SNAPSHOT</version>
+        <version>7.1.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
@@ -101,13 +101,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.3-SNAPSHOT</version>
+            <version>3.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.0.3-SNAPSHOT</version>
+            <version>3.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.3-SNAPSHOT</version>
+            <version>3.0.3</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
