--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -342,7 +342,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>newsletter</artifactId>
-            <version>3.0.2</version>
+            <version>3.0.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
