--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -113,7 +113,7 @@
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.0.2</version>
+           <version>1.0.3-SNAPSHOT</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
