--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -124,7 +124,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>facets</artifactId>
-            <version>7.1.2-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -144,7 +144,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.2.2-SNAPSHOT</version>
+            <version>2.2.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -198,7 +198,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -216,7 +216,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -246,13 +246,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>visibility</artifactId>
-            <version>7.1.2-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
