--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -144,7 +144,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.2.2</version>
+            <version>2.2.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
