--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -336,7 +336,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>forum</artifactId>
-            <version>3.0.2</version>
+            <version>3.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
