--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -249,6 +249,19 @@
             <version>2.0.3</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>bootstrap3-components</artifactId>
+            <version>3.0.1-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>bootstrap3-core</artifactId>
+            <version>3.3.7-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- end of Jahia Forge Modules -->
 
         <!-- Users and groups provider modules -->
