--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -228,7 +228,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-system</artifactId>
-            <version>7.1.1</version>
+            <version>8.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
