--- a/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
+++ b/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
@@ -129,14 +129,16 @@ xercesImpl.jar,xmlParserAPIs.jar,xml-apis.jar,\
 junit.jar,junit-*.jar,ant-launcher.jar,\
 cobertura-*.jar,asm-*.jar,dom4j-*.jar,icu4j-*.jar,jaxen-*.jar,jdom-*.jar,\
 jetty-*.jar,oro-*.jar,servlet-api-*.jar,tagsoup-*.jar,xmlParserAPIs-*.jar,\
-xom-*.jar
+xom-*.jar,\
+derby-*.jar
 
 # Default list of JAR files that should be scanned that overrides the default
 # jarsToSkip list above. This is typically used to include a specific JAR that
 # has been excluded by a broad file name pattern in the jarsToSkip list.
 # The list of JARs to scan may be over-ridden at a Context level for individual
 # scan types by configuring a JarScanner with a nested JarScanFilter.
-tomcat.util.scan.StandardJarScanFilter.jarsToScan=log4j-core*.jar,log4j-taglib*.jar
+tomcat.util.scan.StandardJarScanFilter.jarsToScan=\
+log4j-core*.jar,log4j-taglib*.jar,log4javascript*.jar,slf4j-taglib*.jar
 
 # String cache configuration.
 tomcat.util.buf.StringCache.byte.enabled=true
