--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -210,7 +210,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.3</version>
+            <version>7.1.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
