--- a/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
+++ b/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
@@ -130,7 +130,10 @@ junit.jar,junit-*.jar,ant-launcher.jar,\
 cobertura-*.jar,asm-*.jar,dom4j-*.jar,icu4j-*.jar,jaxen-*.jar,jdom-*.jar,\
 jetty-*.jar,oro-*.jar,servlet-api-*.jar,tagsoup-*.jar,xmlParserAPIs-*.jar,\
 xom-*.jar,\
-derby-*.jar
+derby-*.jar,\
+mysql-connector-java-*.jar,\
+postgresql-*.jar
+
 
 # Default list of JAR files that should be scanned that overrides the default
 # jarsToSkip list above. This is typically used to include a specific JAR that
