--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.4</version>
+            <version>3.0.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
