--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.4</version>
+            <version>3.0.5-SNAPSHOT</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
