--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 
     ==========================================================================================
@@ -252,13 +252,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-components</artifactId>
-            <version>3.5.0-SNAPSHOT</version>
+            <version>3.4.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-core</artifactId>
-            <version>3.5.0-SNAPSHOT</version>
+            <version>3.4.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
